// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`scatter objects in segments > picks from a pool of one single string id 1`] = `
[
  {
    "id": "plants--bush",
    "left": 0,
    "width": 5,
  },
  {
    "id": "plants--bush",
    "left": 6.424349548541568,
    "width": 5,
  },
  {
    "id": "plants--bush",
    "left": 11.651194914081897,
    "width": 5,
  },
]
`;

exports[`scatter objects in segments > picks people at dense density 1`] = `
[
  {
    "id": "The thicc one",
    "left": 0,
    "width": 3,
  },
  {
    "id": "character-05",
    "left": 3.606087387135392,
    "name": "The popular one",
    "weight": 100,
    "width": 2,
  },
  {
    "id": "The thicc one",
    "left": 5.912798728520474,
    "width": 3,
  },
  {
    "id": "character-02",
    "left": 9.655001618279844,
    "name": "Bob",
    "width": 2,
  },
  {
    "id": "The boisterous one",
    "left": 11.861995806598115,
    "weight": 65,
    "width": 3,
  },
  {
    "id": "character-02",
    "left": 14.916528561094843,
    "name": "Bob",
    "width": 2,
  },
  {
    "id": "The boisterous one",
    "left": 17.25277032282099,
    "weight": 65,
    "width": 3,
  },
  {
    "id": "character-01",
    "left": 20.70040088905788,
    "name": "Ashe",
    "width": 2,
  },
  {
    "disallowFirst": true,
    "id": "character-04",
    "left": 23.39881332674785,
    "name": "The shy one",
    "weight": 20,
    "width": 2,
  },
]
`;

exports[`scatter objects in segments > picks people at normal density 1`] = `
[
  {
    "id": "The thicc one",
    "left": 0,
    "width": 3,
  },
  {
    "id": "character-05",
    "left": 6.186957957117974,
    "name": "The popular one",
    "weight": 100,
    "width": 2,
  },
  {
    "id": "The thicc one",
    "left": 10.375995761734915,
    "width": 3,
  },
  {
    "id": "character-02",
    "left": 17.016672060932816,
    "name": "Bob",
    "width": 2,
  },
  {
    "id": "The boisterous one",
    "left": 20.87331935532705,
    "weight": 65,
    "width": 3,
  },
]
`;

exports[`scatter objects in segments > picks people at sparse density 1`] = `
[
  {
    "id": "The thicc one",
    "left": 0,
    "width": 3,
  },
  {
    "id": "character-05",
    "left": 12.14490534881024,
    "name": "The popular one",
    "weight": 100,
    "width": 2,
  },
  {
    "id": "The thicc one",
    "left": 21.62661709625311,
    "width": 3,
  },
]
`;
